# gchat

./: Cargo.toml  README.md
client/: package-lock.json  package.json
client/src/app/: fetchData.ts  globals.css  layout.tsx  page.tsx  utils.ts
client/src/app/[tempChatId]/: page.tsx  passwordModal.tsx
client/src/app/_components/: authModals.tsx  chat.tsx  chatList.tsx  clipboardButton.tsx  createChatForm.tsx  groupManagementModal.tsx  groupSettingsForm.tsx  manageFriends.tsx  ping.tsx  settingsModal.tsx  signInModal.tsx  signupModal.tsx  statCard.tsx  statsComponent.tsx  testChat.tsx  theme-toggle.tsx
client/src/app/fakeData/: fakeData.ts
client/src/app/signin/: page.tsx
client/src/app/signup/: page.tsx
src/: README.md  client.rs  server.rs  state.rs
src/routes/: auth.rs  friend.rs  group.rs  mod.rs  temp_group.rs  user.rs
src/utils/queries/: friend.rs  group.rs  mod.rs  temp_group.rs  user.rs
src/utils/types/: friend.rs  group.rs  mod.rs  temp_group.rs  user.rs
templates/: login.html  register.html
