[package]
name = "gchat"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "=1.36", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
url = "2.5"
tungstenite = "0.26.1"
tokio-rustls = "0.24"
rustls = "0.21"
rustls-pemfile = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "time"] }
dotenv = "0.15"
axum = {version = "0.7", features = ["ws"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gauth = {path = "../gauth"}
axum-extra = {version = "0.10.0", features = ["typed-header"] }

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"
